# cipherstash-dynamodb

./: .gitignore  .rtx.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES.md  README.md  dataset.yml  docker-compose.yaml  dynamo.sh  insert.sh  query.sh  vendor-deps.sh
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy-public-docs.yml  test.yml
cipherstash-dynamodb-derive/: Cargo.toml
cipherstash-dynamodb-derive/src/: decryptable.rs  encryptable.rs  identifiable.rs  lib.rs  searchable.rs
cipherstash-dynamodb-derive/src/settings/: builder.rs  index_type.rs  mod.rs
cryptonamo-derive/: Cargo.toml
cryptonamo-derive/src/: cryptonamo.rs  decryptable.rs  encryptable.rs  lib.rs  searchable.rs  settings.rs
cryptonamo-derive/src/settings/: builder.rs  index_type.rs  mod.rs
examples/: delete_user.rs  derive_test.rs  get_license.rs  get_user.rs  insert_license.rs  insert_user.rs  name_typeahead.rs  query_composite.rs  query_single.rs
examples/common/: license.rs  mod.rs  user.rs  user_result_by_name.rs
local-dynamodb/: Dockerfile  entrypoint.sh
scripts/: generate-readme.sh
src/: async_map_somes.rs  lib.rs  main.rs  table_entry.rs  target.rs
src/crypto/: b64_encode.rs  mod.rs  sealed.rs  sealer.rs  unsealed.rs
src/crypto/attrs/: flattened_encrypted_attributes.rs  flattened_protected_attributes.rs  mod.rs  normalized_protected_attributes.rs
src/dict/: mod.rs
src/enc/: mod.rs
src/encrypted_table/: attribute_name.rs  dynamo.rs  mod.rs  prepared_record.rs  query.rs  table_attribute.rs  table_attributes.rs  table_entry.rs
src/error/: mod.rs
src/errors/: mod.rs
src/query/: mod.rs
src/stack/: mod.rs
src/traits/: mod.rs  primary_key.rs
src/user/: mod.rs
tests/: allprotected_tests.rs  allunprotected_tests.rs  common.rs  compile_tests.rs  decrypt_optional_fields.rs  headless_tests.rs  identifiable_tests.rs  multiple_index_per_field.rs  nested_tests.rs  pk_tests.rs  plaintext_tests.rs  public_api.rs  query_builder_direct.rs  query_regression_data.json  query_regression_tests.rs  query_tests.rs  round_trip_tests.rs  tenant_tests.rs
tests/ui/: compound-index-missing-config.rs  compound-index-missing-config.stderr  compound-index-missing-field.rs  compound-index-missing-field.stderr  compound-index-too-many-fields.rs  compound-index-too-many-fields.stderr  compound-index-unsupported.rs  compound-index-unsupported.stderr  index-unsupported.rs  index-unsupported.stderr  invalid-field-name.rs  invalid-field-name.stderr  no-multi-same-index-per-field.rs  no-multi-same-index-per-field.stderr  pass.rs  pk-field-no-partition.rs  pk-field-no-partition.stderr  pk-field-on-struct.rs  pk-field-wrong-partition.rs  pk-field-wrong-partition.stderr  public_api.rs  sk-field-no-sort.rs  sk-field-no-sort.stderr  sk-field-wrong-sort.rs  sk-field-wrong-sort.stderr  using-pk-instead-of-pk-sk.rs  using-pk-instead-of-pk-sk.stderr  various-fields.rs
