[package]
name = "cipherstash-dynamodb"
license-file = "LICENSE.md"
homepage = "https://cipherstash.com"
repository = "https://github.com/cipherstash/cipherstash-dynamodb"
readme = "README.md"
description = "CipherStash client for storing and querying encrypted data in DynamoDB"
version = "0.7.1"
edition = "2021"

[package.metadata.docs.rs]
repository = "https://github.com/cipherstash/cipherstash-dynamodb"

[lib]
# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
cipherstash-client = { version = "0.12", registry = "cipherstash" }
cipherstash-dynamodb-derive = { version = "0.7", path = "cipherstash-dynamodb-derive", registry = "cipherstash" }

aws-sdk-dynamodb = "1.3.0"
async-trait = "0.1.73"
log = "0.4.20"
itertools = "0.11.0"
thiserror = "1.0.50"
base64 = "0.22.1"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "2.0.0"
trybuild = "1.0.85"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
env_logger = "0.10.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.117"

[features]
default = ["tokio"]
tokio = ["cipherstash-client/tokio"]
