[package]
name = "cipherstash-dynamodb"
license-file = "LICENSE.md"
homepage = "https://cipherstash.com"
repository = "https://github.com/cipherstash/cipherstash-dynamodb"
documentation = "https://docs.rs/cipherstash-dynamodb"
readme = "README.md"
description = "CipherStash SDK for searchable, in-use encryption for DynamoDB"
version = "0.9.0-pre.4"
edition = "2021"
authors = ["CipherStash <info@cipherstash.com>"]
keywords = ["cryptography", "security", "databases", "encryption", "dynamodb"]
categories = ["cryptography", "database"]

[dependencies]
cipherstash-client = { version = "0.27.0" }
cipherstash-dynamodb-derive = { version = "0.8", path = "cipherstash-dynamodb-derive" }

aws-sdk-dynamodb = "1.3.0"
async-trait = "0.1.73"
log = "0.4.20"
itertools = "0.14"
thiserror = "1.0.50"
base64 = "0.22.1"
hex = "0.4.3"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
miette = "7.2.0"
uuid = "1.10.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serial_test = "2.0.0"
trybuild = "1.0.85"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
env_logger = "0.10.0"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.117"
tracing-test = "0.2.5"
# So we can get backtraces in tests
miette = { version = "7.2.0", features = ["fancy"] }
chrono = "0.4.38"

[features]
default = ["tokio"]
tokio = ["cipherstash-client/tokio"]
