[package]
name = "cipherstash-dynamodb-derive"
license-file = "../LICENSE"
homepage = "https://cipherstash.com"
readme = "../README.md"
description = "Derive macros for the CipherStash client for DynamoDB"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
paste = "1.0.14"
proc = "0.1.4"
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = {version = "2.0.31", features = [ "parsing" ]}
itertools = "0.11.0"
indexmap = "2.1.0"
