[package]
name = "cipherstash-dynamodb-derive"
license-file = "../LICENSE.md"
homepage = "https://cipherstash.com"
readme = "../README.md"
description = "Derive macros for the CipherStash client for DynamoDB"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/cipherstash/cipherstash-dynamodb/"

[lib]
proc-macro = true

[dependencies]
paste = "1.0.14"
proc = "0.1.4"
proc-macro2 = "1"
quote = "1.0.33"
syn = { version = "2", features = ["parsing"] }
itertools = "0.14.0"
